Tried to fix swap flicker ... didn't work!

--- a/styles/site.scss
+++ b/styles/site.scss
@@ -33,6 +33,10 @@ $operator-size: 6rem;
 $operator-color: #879093;
 $operator-space-between: $base-space-between / 2;
 
+* {
+  -webkit-backface-visibility: hidden !important;
+}
+
 html {
   font-size: $base-font-size;
   -webkit-font-smoothing: antialiased;
